--- a/bp-templates/shared/styles/_bp_activity_comments.scss
+++ b/bp-templates/shared/styles/_bp_activity_comments.scss
@@ -9,6 +9,7 @@
 
 		ul {
 			clear: both;
+			list-style: none;
 			margin: 0;
 			padding: 0 0 0 $pad-med;
 
